tests/valid/Tuple_Valid_5.whiley
public export method test():
    //
    (final int a, final int b) = (1,2)
    //
    assert a == 1
    //
    assert b == 2
    //
    assert (a,b) == (1,2)
