tests/invalid/Tuple_Invalid_12.whiley
public export method test():
    (int x, final int y) = (1,2)
    x = 1
    y = 1